Version 0.2.2:
	New features:
	- When opening a non-existing file from the command line, the message
	  stating that Tilde could not open the file is now suppressed (#14).

	Bug fixes:
	- Compile with Large File Support if such support is available on the
	  platform.

Version 0.2.1:
	Bug fixes:
	- Fix invalidation of highlighting information, such that highlighting is
	  correctly updated on edits.

Version 0.2.0:
	New features:
	- 256 color mode is now supported.
	- Colors are now configurable from the Options/Interface menu.

Version 0.1.15:
	Bug fixes:
	- Explicitly use t3_widget namespace qualifier for key_t to prevent build
	  failures on some platforms.

Version 0.1.14:
	New features:
	- Matching brace highlighting and go to matching brace function.
	- Tilde now tries to preserve ACLs and other extended attributes (requires
	  libacl and libattr).

	Bug fixes:
	- Try to load the correct config file on errors in the configuration file.
	- Use -V as option for version information, rather than -v.

Version 0.1.13:
	New features:
	- Added an option to allow specification of the encoding on the command
	  line, or ask for encoding on start-up.
	- Handle BOMs on loading of UTF-8 files.

	Bug fixes:
	- Properly handle the start of a file such that BOMs are correctly
	  interpreted.

Version 0.1.12:
	Bug fixes:
	- Use correct name for UTF-8 with BOM converter.

Version 0.1.11:
	New features:
	- An option has been added to show tabs.
	- Follow libt3widget API change.

	Bug fixes:
	- Fix a segmentation fault that would occur on using the mouse in the
	  Input Handling dialog.
	- Added "Indent aware home key" configuration option.

Version 0.1.10:
	New features:
	- Use the new XDG Base Directory Specification support functions in
	  libt3config to use configuration file in the correct directory.
	- Use the new libt3highlight language-detection features.

Version 0.1.9:
	New features:
	- Follow libt3highlight API changes for libt3highlight 0.2.0.

Version 0.1.8: