@@ -20,3 +20,4 @@
 /testsuite/mockdir/mockdir_test
 /testsuite/mockdir/libmockdir.la
 /testsuite/mockdir/work
+/man/output
