@@ -1,70 +1,0 @@
-.\" Copyright (C) 2011-2012 G.P. Halkes
-.\" This program is free software: you can redistribute it and/or modify
-.\" it under the terms of the GNU General Public License version 3, as
-.\" published by the Free Software Foundation.
-.\"
-.\" This program is distributed in the hope that it will be useful,
-.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
-.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-.\" GNU General Public License for more details.
-.\"
-.\" You should have received a copy of the GNU General Public License
-.\" along with this program.  If not, see <http://www.gnu.org/licenses/>.
-.TH "Tilde" "1" "<DATE>" "Version <VERSION>" "An intuitive terminal text editor"
-.hw /usr/share/doc/tilde-<VERSION> http://os.ghalkes.nl/tilde.html
-
-.SH NAME
-
-\fBTilde\fP \- an intuitive text editor for the console/terminal
-.SH SYNOPSIS
-
-\fBtilde\fP [\fIOPTIONS\fP] [<\fIFILE...\fP>]
-.SH DESCRIPTION
-
-\fBTilde\fP is a text editor for the console/terminal, which tries to be as
-intuitive as possible for users who are accustomed to GUI environments such as
-Gnome, KDE and Windows. For example, the short-cut to copy the current
-selection is Control-C, and to paste the previously copied text the short-cut
-Control-V can be used. As another example, the File menu can be accessed by
-pressing Meta-F.
-
-.SH OPTIONS
-\fBTilde\fP accepts the following options:
-.IP "\fB\-b\fP, \fB\-\-black\-white\fP"
-Force \fBTilde\fP to use black & white mode. Only attributes such as reverse
-video, underline and bold text will be used to create the interface. This option
-overrides the setting from the configuration file.
-.IP "\fB\-c\fP, \fB\-\-color\fP"
-Request \fBTilde\fP to use color mode. This option overrides the setting from
-the configuration file. If the terminal does not support color, or does not
-provide sufficient colors, this option will be ignored.
-.IP "\fB\-h\fP, \fB\-\-help\fP"
-Display a short help message.
-.IP "\fB\-I\fP, \fB\-\-select\-input\-method\fP"
-Ask the user to select the input handling method immediately after start-up, as
-if the user had not previously selected one for the current terminal type.
-.IP "\fB\-T\fP <\fBterminal\fP>, \fB\-\-terminal\fP=<\fBterminal\fP>"
-Set the terminal type to \fBterminal\fP, overriding the TERM environment
-variable.
-.IP "\fB\-V\fP, \fB\-\-version\fP"
-Print version and copyright information.
-.PP
-To stop \fBTilde\fP from interpreting file names that start with a dash as
-options, one can specify a double dash (\-\-) after which \fBTilde\fP will
-interpret any following arguments as files to read.
-.SH BUGS
-
-If you think you have found a bug, please check that you are using the latest
-version of \fBTilde\fP [http://os.ghalkes.nl/tilde.html]. When reporting
-bugs, please include a minimal example that demonstrates the problem.
-.SH AUTHOR
-
-G.P. Halkes <tilde@ghalkes.nl>
-.SH COPYRIGHT
-
-Copyright \(co 2011-2012 G.P. Halkes
-.br
-Tilde is licensed under the GNU General Public License version 3.
-.br
-For more details on the license, see the file COPYING in the documentation
-directory. On Un*x systems this is usually /usr/share/doc/tilde.
